Add contact form with mailto functionality

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <a href="./">Home</a>
       <a href="./projects/">Projects</a>
       <a href="./contact/">Contact</a>
-      <a href="https://github.com/Shaanb2000" target="_blank" rel="noopener">GitHub ↗</a>
+      <a href="https://github.com/YOUR_USERNAME" target="_blank" rel="noopener">GitHub ↗</a>
     </nav>
   </header>
   <main>
@@ -22,7 +22,7 @@
       <h2>About</h2>
       <p>I like data viz, MERN apps, and applied AI. This site is my lab for DSC 106.</p>
       <figure>
-        <img src="./images/me.jpg" alt="Shaan in the mountains with scenic Alpine landscape" />
+        <img src="./images/me.svg" alt="Shaan smiling at UCSD campus" />
         <figcaption>Hi! I build data visuals &amp; web apps.</figcaption>
       </figure>
     </section>
