Update contact form with correct email and GitHub username

--- a/contact/index.html
+++ b/contact/index.html
@@ -13,11 +13,11 @@
       <a href="../">Home</a>
       <a href="../projects/">Projects</a>
       <a href="./">Contact</a>
-      <a href="https://github.com/YOUR_USERNAME" target="_blank" rel="noopener">GitHub ↗</a>
+      <a href="https://github.com/Shaanb2000" target="_blank" rel="noopener">GitHub ↗</a>
     </nav>
   </header>
   <main>
-    <form action="mailto:YOUR_EMAIL@ucsd.edu" method="POST" enctype="text/plain">
+    <form action="mailto:shaanb2000@ucsd.edu" method="POST" enctype="text/plain">
       <label>
         Your email
         <input name="email" type="email" value="yourname@ucsd.edu" required>
