--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
       <a href="./">Home</a>
       <a href="./projects/">Projects</a>
       <a href="./contact/">Contact</a>
-      <a href="https://github.com/YOUR_USERNAME" target="_blank" rel="noopener">GitHub ↗</a>
+      <a href="./cv/">CV</a>
+      <a href="https://github.com/Shaanb2000" target="_blank" rel="noopener">GitHub ↗</a>
     </nav>
   </header>
   <main>
