--- a/contact/index.html
+++ b/contact/index.html
@@ -13,7 +13,7 @@
       <a href="../">Home</a>
       <a href="../projects/">Projects</a>
       <a href="./">Contact</a>
-      <a href="../cv/">CV</a>
+  <a href="../resume/">Resume</a>
       <a href="https://github.com/Shaanb2000" target="_blank" rel="noopener">GitHub ↗</a>
     </nav>
   </header>
