Add personal photo and use it in About figure

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <h2>About</h2>
       <p>I like data viz, MERN apps, and applied AI. This site is my lab for DSC 106.</p>
       <figure>
-        <img src="./images/me.svg" alt="Shaan smiling at UCSD campus" />
+        <img src="./images/me.jpg" alt="Shaan smiling at UCSD campus" />
         <figcaption>Hi! I build data visuals &amp; web apps.</figcaption>
       </figure>
     </section>
