Update homepage content, fix resume summary, and ensure image references are correct

--- a/resume/index.html
+++ b/resume/index.html
@@ -35,7 +35,7 @@
 
     <section aria-labelledby="summary">
       <h2 id="summary">Professional Summary</h2>
-      <p>UC San Diego student with strong attention to detail, research ability, and communication skills. Experienced in handling sensitive information, maintaining accuracy in records, and following structured guidelines. Excited to contribute to quality assurance and online research as part of TELUS International's AI team.</p>
+  <p>UC San Diego student with strong attention to detail, research ability, and communication skills. Experienced in handling sensitive information, maintaining accuracy in records, and following structured guidelines.</p>
     </section>
 
     <section aria-labelledby="skills">
