--- a/cv/index.html
+++ b/cv/index.html
@@ -10,10 +10,10 @@
   <header>
     <h1>Curriculum Vitae</h1>
     <nav aria-label="Primary">
-      <a href="../">Home</a>
-      <a href="../projects/">Projects</a>
-      <a href="../contact/">Contact</a>
-      <a href="./">CV</a>
+      <a href="../index.html">Home</a>
+      <a href="../projects/index.html">Projects</a>
+      <a href="../contact/index.html">Contact</a>
+      <a href="index.html">CV</a>
       <a href="https://github.com/Shaanb2000" target="_blank" rel="noopener">GitHub ↗</a>
     </nav>
   </header>
