--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
   </header>
 
   <nav aria-label="Primary">
-      <a href="/">Home</a>
-      <a href="/projects/">Projects</a>
-      <a href="/contact/">Contact</a>
-      <a href="/cv/">CV</a>
-      <a href="https://github.com/YOUR_USERNAME" target="_blank" rel="noopener">GitHub</a>
+    <a href="index.html">Home</a>
+    <a href="projects/index.html">Projects</a>
+    <a href="contact/index.html">Contact</a>
+    <a href="cv/index.html">CV</a>
+    <a href="https://github.com/Shaanb2000" target="_blank" rel="noopener">GitHub</a>
   </nav>
 
   <main>
