Update CV/Resume navigation and CV page content

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <a href="index.html">Home</a>
     <a href="projects/index.html">Projects</a>
     <a href="contact/index.html">Contact</a>
-    <a href="cv/index.html">CV</a>
+  <a href="resume/index.html">CV/Resume</a>
     <a href="https://github.com/Shaanb2000" target="_blank" rel="noopener">GitHub</a>
   </nav>
 
