Lab 2: Add responsive styling, nav, contact form grid, and projects grid

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
   </header>
 
   <nav aria-label="Primary">
-    <a href="index.html">Home</a>
+    <a href="index.html" class="current">Home</a>
     <a href="projects/index.html">Projects</a>
     <a href="contact/index.html">Contact</a>
-  <a href="resume/index.html">CV/Resume</a>
+    <a href="resume/index.html">CV/Resume</a>
     <a href="https://github.com/Shaanb2000" target="_blank" rel="noopener">GitHub</a>
   </nav>
 
