--- a/contact/index.html
+++ b/contact/index.html
@@ -12,7 +12,7 @@
     <nav aria-label="Primary">
       <a href="../index.html">Home</a>
       <a href="../projects/index.html">Projects</a>
-      <a href="index.html">Contact</a>
+      <a href="index.html" class="current">Contact</a>
       <a href="../resume/index.html">Resume</a>
       <a href="https://github.com/Shaanb2000" target="_blank" rel="noopener">GitHub ↗</a>
     </nav>
