Lab 2: Consistent nav, accent, Flexbox nav, Grid contact form, responsive Projects grid, heading hierarchy

--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
     />
   </header>
 
-  <nav aria-label="Primary">
-    <a href="index.html" class="current">Home</a>
-    <a href="projects/index.html">Projects</a>
-    <a href="contact/index.html">Contact</a>
-    <a href="resume/index.html">CV/Resume</a>
-    <a href="https://github.com/Shaanb2000" target="_blank" rel="noopener">GitHub</a>
+  <nav>
+    <a href="/" class="current">Home</a>
+    <a href="/projects/">Projects</a>
+    <a href="/contact/">Contact</a>
+    <a href="/resume/">Resume</a>
+    <a href="https://github.com/shaanb2000" target="_blank" rel="noopener">GitHub</a>
   </nav>
 
   <main>
