--- a/resume/index.html
+++ b/resume/index.html
@@ -19,12 +19,12 @@
 <body>
   <header>
     <h1>Resume</h1>
-    <nav aria-label="Primary">
-      <a href="../index.html">Home</a>
-      <a href="../projects/index.html">Projects</a>
-      <a href="../contact/index.html">Contact</a>
-      <a href="index.html">Resume</a>
-      <a href="https://github.com/Shaanb2000" target="_blank" rel="noopener">GitHub ↗</a>
+    <nav>
+      <a href="/">Home</a>
+      <a href="/projects/">Projects</a>
+      <a href="/contact/">Contact</a>
+      <a href="/resume/" class="current">Resume</a>
+      <a href="https://github.com/shaanb2000" target="_blank" rel="noopener">GitHub</a>
     </nav>
   </header>
   <main>
