--- a/contact/index.html
+++ b/contact/index.html
@@ -10,10 +10,10 @@
   <header>
     <h1>Contact</h1>
     <nav>
-      <a href="/">Home</a>
-      <a href="/projects/">Projects</a>
-      <a href="/contact/" class="current">Contact</a>
-      <a href="/resume/">Resume</a>
+      <a href="../index.html">Home</a>
+      <a href="../projects/index.html">Projects</a>
+      <a href="index.html" class="current">Contact</a>
+      <a href="../resume/index.html">Resume</a>
       <a href="https://github.com/shaanb2000" target="_blank" rel="noopener">GitHub</a>
     </nav>
   </header>
