--- a/projects/index.html
+++ b/projects/index.html
@@ -10,10 +10,10 @@
   <header>
     <h1>Projects</h1>
     <nav>
-      <a href="/">Home</a>
-      <a href="/projects/" class="current">Projects</a>
-      <a href="/contact/">Contact</a>
-      <a href="/resume/">Resume</a>
+      <a href="../index.html">Home</a>
+      <a href="index.html" class="current">Projects</a>
+      <a href="../contact/index.html">Contact</a>
+      <a href="../resume/index.html">Resume</a>
       <a href="https://github.com/shaanb2000" target="_blank" rel="noopener">GitHub</a>
     </nav>
   </header>
