Lab 3: Add interactive JavaScript features - Helper function (), auto navigation, theme selector, contact form encoder

--- a/index.html
+++ b/index.html
@@ -70,5 +70,6 @@
   <footer>
     <p>© 2025 Shaan Bhakta | Built for DSC 106 Lab 1</p>
   </footer>
+  <script src="global.js" type="module"></script>
 </body>
 </html>
