--- a/resume/index.html
+++ b/resume/index.html
@@ -23,7 +23,7 @@
       <a href="../index.html">Home</a>
       <a href="../projects/index.html">Projects</a>
       <a href="../contact/index.html">Contact</a>
-      <a href="index.html" class="current">Resume</a>
+      <a href="index.html">Resume</a>
       <a href="https://github.com/shaanb2000" target="_blank" rel="noopener">GitHub</a>
     </nav>
   </header>
