Step 5: Improve contact form with proper mailto URL encoding

--- a/contact/index.html
+++ b/contact/index.html
@@ -11,7 +11,7 @@
     <h1>Contact</h1>
   </header>
   <main>
-    <form action="mailto:shaanb2000@ucsd.edu" method="POST" enctype="text/plain">
+    <form>
       <label>
         Your email
         <input name="email" type="email" value="yourname@ucsd.edu" required>
