--- a/resume/index.html
+++ b/resume/index.html
@@ -10,9 +10,9 @@
     main { max-width: 800px; margin: 1.5rem auto; padding: 0 1rem; }
     header.resume-head { text-align:center; margin-bottom:1rem }
     header.resume-head h1 { font-size:2rem; letter-spacing:1px }
-    .meta { color:#374151; }
+    .meta { color: canvastext; opacity: 0.7; }
     section { margin-top:1.25rem }
-    h2 { border-top:1px solid #e5e7eb; padding-top:0.5rem }
+    h2 { border-top:1px solid oklch(50% 10% 200 / 40%); padding-top:0.5rem }
     ul { margin-left:1rem }
   </style>
 </head>
